# deer-flow

./: deerflow_main_loop_analysis.md  deerflow_main_workflow.md  deerflow_simplified_workflow.md  rag_usage_levels_analysis.md  research_team_callers_analysis.md
training_agent_project/: README.md  pyproject.toml
training_agent_project/docs/: command_execution_mechanism.md  command_flow_diagram.md  command_flow_explanation.md
training_agent_project/examples/: basic_usage.py  command_flow_demo.py  command_routing_demo.py  dynamic_execution_example.py  rag_example.py
training_agent_project/src/graph/: builder.py  dynamic_executor.py  nodes.py  types.py
training_agent_project/src/rag/: knowledge_retriever.py
training_agent_project/src/server/: app.py
training_agent_project/src/tools/: cluster_tools.py
